<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTodoDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/todo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvPriority"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01999998" />

        <TextView
            android:id="@+id/tvTodoDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="@+id/tvTodoDescription"
            app:layout_constraintStart_toStartOf="@+id/tvTodoDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvTodoDescription" />

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/priority_background"
            android:gravity="center"
            android:text="@string/count"
            app:layout_constraintBottom_toBottomOf="@+id/tvTodoDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTodoDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>